--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'java'
 buildscript {
     repositories {
         jcenter()
@@ -24,4 +25,5 @@ task clean(type: Delete) {
 
 dependencies {
     compile files('app/libs/java-sdk-3.3.1-jar-with-dependencies.jar')
+    compile files('com.ibm.watson.developer_cloud:java-sdk:3.3.1')
 }
