--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,6 @@ task clean(type: Delete) {
 }
 
 dependencies {
-    compile files('app/libs/java-sdk-3.3.1-jar-with-dependencies.jar')
-    compile files('com.ibm.watson.developer_cloud:java-sdk:3.3.1')
+    compile files('libs/java-sdk-3.3.1-jar-with-dependencies.jar')
+    compile files('libs/jsoup-1.9.2.jar')
 }
