--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.esri.arcgis.android:arcgis-android:10.2.8-1'
+    compile 'com.ibm.watson.developer_cloud:java-sdk:3.3.1'
 }
