woan chin has two labels on maps!

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ allprojects {
     repositories {
         jcenter()
         maven {
-            url 'https://esri.bintray.com/arcgis'
+            url 'http://artifactory.cloud.mapquest.com/artifactory/et-android-binaries'
         }
     }
 }
