--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,18 @@ android {
         exclude 'META-INF/LGPL2.1'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
+        exclude 'META-INF/maven/com.squareup.okio/okio/pom.xml'
+        exclude 'META-INF/maven/com.squareup.okio/okio/pom.properties'
+        exclude 'META-INF/maven/com.squareup.okhttp3/okhttp/pom.properties'
+        exclude 'META-INF/maven/com.squareup.okhttp3/okhttp/pom.xml'
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.esri.arcgis.android:arcgis-android:10.2.8-1'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile("com.mapquest:mapping-android-sdk:1.0.5@aar") {
+        transitive = true
+    }
 }
