--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.esri.arcgis.android:arcgis-android:10.2.8-1'
     compile files('libs/jsoup-1.9.2.jar')
     compile files('libs/jcommander-1.35.jar')
+    compile files('libs/scribe-1.3.5.jar')
+    compile files('libs/json_simple-1.1.jar')
 }
