--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,5 @@ task clean(type: Delete) {
 dependencies {
     compile files('app/libs/java-sdk-3.3.1-jar-with-dependencies.jar')
     compile files('com.ibm.watson.developer_cloud:java-sdk:3.3.1')
+    compile 'co.devcenter.square:android-ui-library:0.1'
 }
