--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile files('libs/jcommander-1.35.jar')
     compile files('libs/scribe-1.3.5.jar')
     compile files('libs/json_simple-1.1.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
