--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,12 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.esri.arcgis.android:arcgis-android:10.2.8-1'
+    //compile 'com.esri.arcgis.android:arcgis-android:10.2.8-1'
     compile files('libs/jsoup-1.9.2.jar')
     compile files('libs/jcommander-1.35.jar')
     compile files('libs/scribe-1.3.5.jar')
     compile files('libs/json_simple-1.1.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
-    compile 'com.android.support:appcompat-v7:24.2.0'
     compile("com.mapquest:mapping-android-sdk:1.0.5@aar") {
         transitive = true
     }
