--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
+
+    compile 'com.ibm.watson.developer_cloud:java-sdk:3.3.1'
     //compile 'com.esri.arcgis.android:arcgis-android:10.2.8-1'
     compile files('libs/jsoup-1.9.2.jar')
     compile files('libs/jcommander-1.35.jar')
